  of the current macro or string.
* [nt]roff: The "(c;e)" numerical expression function has been added to
  evaluate "e" using "c" as default scale indicator.
* [nt]roff: The "M" (Em/100), "s" (= "u"), and "z" (= "p") scale indicators
  have been added.
* [nt]roff: The "\n[.ev]" number register has been added as a method to
  determine the name of the current environment.
* [nt]roff: In extension level 1, long string "\*[xxx]", register "\n[xxx]",
  and font "\f[xxx]" names are no longer recognized unless they are on a
  line beginning with the ".do" request.
* [nt]roff: The "\n[.ps]" number register, which holds the current font
  size in device units, has been added.
* [nt]roff: The "\E" escape sequence has been fixed; it does not resolve
  to a printable but to an effective escape character now.
* [nt]roff: The "\)" escape sequence (like "\&" but transparent for
  sentence ending) has been added.
* troff: The "\/" and "\," escape sequences have been added in very basic
  implementations for groff compatibility only; it is recommended that the
  ".kernpair" request is used instead.
* [nt]roff: The "-mg" macro package has been added for improved support of
  groff documents, preprocessors, and macro sets.
* [nt]roff: Static limits on word and line size have been eliminated.
* [nt]roff: The ".tm" and ".write" commands now discard formatted motion
  sequences.
* troff: The ".psbb" request now reads a "%%HiResBoundingBox" DSC comment
  in preference to "%%BoundingBox"; the registers it assigns to are now
  floating-point registers.
* troff: The ".psbb" request now properly supports the "(atend)" syntax in
  PostScript DSC input files.
* nroff: The ".psbb" request has been made a no-op since nroff cannot
  otherwise handle EPS documents anyway.
* [nt]roff: The "\(dq" character has been introduced as an alternate name
  for the ASCII double quote character.
* tbl: When ending macros in generated code, ".00" is now used instead