@@ -43,7 +43,7 @@
 .\"
 .\"
 .\" Changes by Gunnar Ritter, Freiburg i. Br., Germany, February 2006.
-.\" Sccsid @(#)doc.tr	1.104 (gritter) 8/8/06
+.\" Sccsid @(#)doc.tr	1.105 (gritter) 8/8/06
 .\"
 .\" from file m.mac
 .do xflag 3
@@ -262,7 +262,7 @@
 .de barefo
 .if \\n[savedline] \{\
 .di
-.if (\\n(dl<(\\n(.l))&(\\n[nosave]=0) .restore \" orphan detected
+.if (\\n(dl<(\\n(.l))&(\\n[nosave]=0) .restore \" widow detected
 .\}
 .if dcx .cx
 .nr dn 0
@@ -1872,6 +1872,8 @@ Reference	Name	Description
 \(en	\fBminutes\fR	Minutes portion of current local time (0\(en59).
 \(en	\fBmo\fR	Current month (1\(en12).
 \T'n_nl'4.1\T	\T'n_nl'\fBnl\fR\T	\T'n_nl'Vertical position of last printed text base-line.\T
+\T'n_rsb'11.2\T	\T'n_rsb'\fBrsb\fR\T	\T'n_rsb'Visual depth of string below base line (generated by \fIwidth\fR function).\T
+\T'n_rst'11.2\T	\T'n_rst'\fBrst\fR\T	\T'n_rst'Visual depth of string above base line (generated by \fIwidth\fR function).\T
 \T'n_sb'11.2\T	\T'n_sb'\fBsb\fR\T	\T'n_sb'Depth of string below base line (generated by \fIwidth\fR function).\T
 \(en	\fBseconds\fR	Seconds portion of current local time (0\(en60).
 \T'n_st'11.2\T	\T'n_st'\fBst\fR\T	\T'n_st'Height of string above base line (generated by \fIwidth\fR function).\T
@@ -4396,12 +4398,17 @@ For example,
 temporarily indent leftward a distance equal to the
 size of the string "\fB1.|\fR" in font \fBB\fR.
 .pg
-The width function also sets three number registers.
+The width function also sets five number registers.
 The registers \A'n_st'\fBst\fR and \A'n_sb'\fBsb\fR
 are set respectively to the highest and
 lowest extent of \fIstring\fR relative to the baseline;
 then, for example,
 the total \fIheight\fR of the string is \fB\en(stu\-\en(sbu\fR.
+The registers \A'n_rst'\fBrst\fR and \A'n_rsb'\fBrsb\fR
+are set respectively to the highest and lowest visual extent
+of \fIstring\fR relative to the baseline,
+i.e. to the maximum and minimum extent of the \fIy\fR value
+of any bounding box of the characters in \fIstring\fR.
 In \*(TR the number register \A'n_ct'\fBct\fR is set to a value
 between 0|and|3:
 0 means that all of the characters in \fIstring\fR were short lower
@@ -4941,6 +4948,7 @@ Some examples are:
 .x2
 which outputs a title if the page number is even; and
 .x1
+.ne 6
 .ft B
 .ne 3.1
 &ie \en%>1 \e{\e
@@ -6158,9 +6166,6 @@ such as \T'e_f'\fB\ef\fR\T, \T'e_s'\fB\es\fR\T, or \T'e_;'\fB\e;\fR\T.
 .ip
 Diverted characters can be interpreted
 as control or escape characters.
-.ip
-The \T'c_width'\fIwidth\fR function (\(sc11.2)\T
-provides no information about glyph shapes.
 .rm EM
 .bp
 .\" from file m5
